# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  main-check.yml  main.yml
gendiff/: __init__.py  argument_parser.py  argument_parsing.py  diff_creater.py  file_extension.py  file_parser.py  file_parsing.py  generate_diff.py
gendiff/formatters/: json_.py  json_yaml_encoder.py  output_formatter.py  plain.py  plane.py  stylish.py  templates.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: json_diff_result.json
tests/fixtures/results/: json_form_diff_result.json
