[project]
name = "hexlet-code"
dynamic = [ "version", "dependencies", "requires-python" ]
description = ""
authors = [
    { name = "Levon Kharajyan", email = "l.kharajyan@gmail.com" }
]
readme = "README.md"

[tool.poetry]
version = "0.1.0"
packages = [
    { include = "gendiff" }
]

[project.scripts] 
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
